# mautrix-wechat

./: .dockerignore  .gitignore  .pdm.toml  Dockerfile  Dockerfile-box  LICENSE  README.md  TODO  config.yaml  docker-run.sh  pyproject.toml  registration.yaml  setup.cfg
.github/workflows/: release.yml
mautrix_wechat/: __main__.py  config.py  example-config.yaml  matrix.py  portal.py  puppet.py  user.py  version.py  wechat.py
mautrix_wechat/commands/: __init__.py  test.py  types.py
mautrix_wechat/db/: __init__.py  message.py  portal.py  puppet.py  upgrade.py  user.py
mautrix_wechat/formatter/: __init__.py  from_matrix.py  from_wechat.py
mautrix_wechat/util/: __init__.py  color_log.py  containers.py  file.py  locks.py
root/: mautrix-wechat-entrypoint.sh
root/payloads/: 003-install-mautrix-wechat.sh
wesdk/: README.md  client.py  image.py  query.py  test.py  types.py
