[metadata]
name = mautrix_wechay
description = A Matrix-Wechat puppeting bridge, based on https://github.com/ChisBread/wechat-box
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/LeiShi1313/mautrix-wechat
author = leishi1313
classifiers =
    Environment :: Console
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls = 
    Documentation = https://github.com/LeiShi1313/mautrix-wechat/blob/main/README.md
    Source = https://github.com/LeiShi1313/mautrix-wechat
    Tracker = https://github.com/LeiShi1313/mautrix-wechat/issues

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires =
    mautrix>=0.16.0
    attrs>=19.1
    yarl>=1,<2
    aiohttp>=3,<4
    ruamel.yaml>=0.15.94,<0.18
    asyncpg>=0.25
    websockets>=10.0
    commonmark>=0.8,<0.10
    requests
    python-dateutil
python_requires = ~=3.8
setup_requires =
    setuptools_scm

[bdist_wheel]
universal = 1

[options.entry_points]

[options.extras_require]
test =
    pytest
all =
    %(test)s